<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

    <LinearLayout
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <EditText

                android:id="@+id/input_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="text"
                />
        <EditText
                android:id="@+id/input_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                />
        <LinearLayout android:layout_height="wrap_content"
                      android:layout_width="fill_parent"
                      android:orientation="horizontal">
            <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:onClick="signUp"
                    android:enabled="false"
                    />
            <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"

                    />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
